[project]
name = "process-monitor"
version = "0.1.0"
description = "Show list processors: pid, cpu usage, memory usage."
authors = [
    {name = "Pionicle", email = "stolyarovwork87@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "psutil (>=7.2.2,<8.0.0)",
    "tabulate (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
